Update font style

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .weather-app {
-  font-family: "Boogaloo", cursive;
+  font-family: "Architects Daughter", cursive;
   background-color: #607d8b;
   margin: 15px;
   padding: 8px;
@@ -99,5 +99,5 @@ hr {
 footer {
   color: #212121;
   font-size: 12pt;
-  font-family: "Boogaloo", cursive;
+  font-family: "Architects Daughter", cursive;
 }
